# django_scraping_proxys

./: .gitignore  README.md  pyproject.toml  requirements.txt
django_proxys/: manage.py
django_proxys/django_proxys/: asgi.py  settings.py  urls.py  wsgi.py
django_proxys/proxys/: admin.py  apps.py  models.py  urls.py  views.py
django_proxys/proxys/migrations/: 0001_initial.py  0002_alter_proxy_uptime.py
django_proxys/proxys/templates/proxys/: base.html  login.html  proxy_confirm_delete.html  proxy_form.html  proxy_form_edit.html  proxy_list.html
scraping/: model.py  scrap.py  sele.py  soup.py  test.py
