[tool.poetry]
name = "django_scraping_proxys"
version = "0.1.0"
description = ""
authors = ["iorjunior <juniorcoda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.2"
beautifulsoup4 = "^4.10.0"
peewee = "^3.14.9"
selenium = "^4.1.0"
webdriver-manager = "^3.5.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
